--- a/rates.html
+++ b/rates.html
@@ -18,7 +18,7 @@
     </nav></center>
 
 <center><h2 style= "font-size:175%"><u> Rates </u></h2></center>
-<center><img src="rate.JPEG" alt=Rates" style="width:1000px; height:500px"></center>
+<center><img src="rate.JPEG" alt=Rates" style="width:1000px; height:500px; color:white"></center>
 <figcaption style="color:white;text-align: center; font-size: 16px;background-color:transparent ; margin:auto; width: 80%;"><i>Joining fee ($60) and Reactivation Fee ($30) applies for all membership plan. Access to all gyms. Payment must be made in full for all membership plans. GYMMBOXX Pte Ltd reserve the rights to amend any of the terms and conditions stated here without prior notice.</i></figcaption>
 <br>
 
